--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+.dropdown-content{
+    z-index: 2;
+}
+
 .banner {
     position: relative;   /* Required for absolute children */
     width: 100%;
@@ -5,7 +9,7 @@
 
 .banner-image {
     width: 100%;
-    height: 620px;
+    /* height: 620px; */
     display: block;
 }
 
